// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodeCreationInputType Definition Article has a creation input type: ArticleCreationInput 1`] = `
""""The "Article" node's creation"""
input ArticleCreationInput {
  """You can either provide an UUID or let one be generated for you"""
  id: UUIDv4
  status: ArticleStatus! = DRAFT
  title: NonEmptyNormalizedString!

  """You can either provide a slug or let the title be "slugified" for you"""
  slug: NonEmptyTrimmedString

  """The article's body"""
  body: DraftJS
  category: ArticleCreationCategoryInput

  """Contains any arbitrary data you want to store alongside the article"""
  metas: JSONObject

  """Is the article highlighted?"""
  highlighted: Boolean

  """Is the article a partnership?"""
  sponsored: Boolean
  machineTags: JSONArray
  tags: ArticleCreationTagsInput
  extension: ArticleCreationExtensionInput

  """It is possible to provide the article's body as raw HTML"""
  htmlBody: String
}"
`;

exports[`NodeCreationInputType Definition Article has a creation input type: ArticleCreationWithoutCategoryInput 1`] = `
""""The "Article" node's creation"""
input ArticleCreationWithoutCategoryInput {
  """You can either provide an UUID or let one be generated for you"""
  id: UUIDv4
  status: ArticleStatus! = DRAFT
  title: NonEmptyNormalizedString!

  """You can either provide a slug or let the title be "slugified" for you"""
  slug: NonEmptyTrimmedString

  """The article's body"""
  body: DraftJS

  """Contains any arbitrary data you want to store alongside the article"""
  metas: JSONObject

  """Is the article highlighted?"""
  highlighted: Boolean

  """Is the article a partnership?"""
  sponsored: Boolean
  machineTags: JSONArray
  tags: ArticleCreationTagsInput
  extension: ArticleCreationExtensionInput

  """It is possible to provide the article's body as raw HTML"""
  htmlBody: String
}"
`;

exports[`NodeCreationInputType Definition Article has a creation input type: ArticleCreationWithoutCreatedByInput 1`] = `
""""The "Article" node's creation"""
input ArticleCreationWithoutCreatedByInput {
  """You can either provide an UUID or let one be generated for you"""
  id: UUIDv4
  status: ArticleStatus! = DRAFT
  title: NonEmptyNormalizedString!

  """You can either provide a slug or let the title be "slugified" for you"""
  slug: NonEmptyTrimmedString

  """The article's body"""
  body: DraftJS
  category: ArticleCreationCategoryInput

  """Contains any arbitrary data you want to store alongside the article"""
  metas: JSONObject

  """Is the article highlighted?"""
  highlighted: Boolean

  """Is the article a partnership?"""
  sponsored: Boolean
  machineTags: JSONArray
  tags: ArticleCreationTagsInput
  extension: ArticleCreationExtensionInput

  """It is possible to provide the article's body as raw HTML"""
  htmlBody: String
}"
`;

exports[`NodeCreationInputType Definition Article has a creation input type: ArticleCreationWithoutUpdatedByInput 1`] = `
""""The "Article" node's creation"""
input ArticleCreationWithoutUpdatedByInput {
  """You can either provide an UUID or let one be generated for you"""
  id: UUIDv4
  status: ArticleStatus! = DRAFT
  title: NonEmptyNormalizedString!

  """You can either provide a slug or let the title be "slugified" for you"""
  slug: NonEmptyTrimmedString

  """The article's body"""
  body: DraftJS
  category: ArticleCreationCategoryInput

  """Contains any arbitrary data you want to store alongside the article"""
  metas: JSONObject

  """Is the article highlighted?"""
  highlighted: Boolean

  """Is the article a partnership?"""
  sponsored: Boolean
  machineTags: JSONArray
  tags: ArticleCreationTagsInput
  extension: ArticleCreationExtensionInput

  """It is possible to provide the article's body as raw HTML"""
  htmlBody: String
}"
`;

exports[`NodeCreationInputType Definition ArticleExtension has a creation input type: ArticleExtensionCreationInput 1`] = `
""""The "ArticleExtension" node's creation"""
input ArticleExtensionCreationInput {
  article: ArticleExtensionCreationArticleInput!

  """The source of the article"""
  source: NonEmptyTrimmedString
}"
`;

exports[`NodeCreationInputType Definition ArticleExtension has a creation input type: ArticleExtensionCreationWithoutArticleInput 1`] = `
""""The "ArticleExtension" node's creation"""
input ArticleExtensionCreationWithoutArticleInput {
  """The source of the article"""
  source: NonEmptyTrimmedString
}"
`;

exports[`NodeCreationInputType Definition ArticleTag has a creation input type: ArticleTagCreationInput 1`] = `
""""The "ArticleTag" node's creation"""
input ArticleTagCreationInput {
  article: ArticleTagCreationArticleInput!
  tag: ArticleTagCreationTagInput!
  order: UnsignedInt!
  moderations: ArticleTagCreationModerationsInput
}"
`;

exports[`NodeCreationInputType Definition ArticleTag has a creation input type: ArticleTagCreationWithoutArticleInput 1`] = `
""""The "ArticleTag" node's creation"""
input ArticleTagCreationWithoutArticleInput {
  tag: ArticleTagCreationTagInput!
  order: UnsignedInt!
  moderations: ArticleTagCreationModerationsInput
}"
`;

exports[`NodeCreationInputType Definition ArticleTag has a creation input type: ArticleTagCreationWithoutTagInput 1`] = `
""""The "ArticleTag" node's creation"""
input ArticleTagCreationWithoutTagInput {
  article: ArticleTagCreationArticleInput!
  order: UnsignedInt!
  moderations: ArticleTagCreationModerationsInput
}"
`;

exports[`NodeCreationInputType Definition ArticleTagModeration has a creation input type: ArticleTagModerationCreationInput 1`] = `
""""The "ArticleTagModeration" node's creation"""
input ArticleTagModerationCreationInput {
  articleTag: ArticleTagModerationCreationArticleTagInput!
  moderator: ArticleTagModerationCreationModeratorInput!
  moderation: NonEmptyTrimmedString
}"
`;

exports[`NodeCreationInputType Definition ArticleTagModeration has a creation input type: ArticleTagModerationCreationWithoutArticleTagInput 1`] = `
""""The "ArticleTagModeration" node's creation"""
input ArticleTagModerationCreationWithoutArticleTagInput {
  moderator: ArticleTagModerationCreationModeratorInput!
  moderation: NonEmptyTrimmedString
}"
`;

exports[`NodeCreationInputType Definition ArticleTagModeration has a creation input type: ArticleTagModerationCreationWithoutModeratorInput 1`] = `
""""The "ArticleTagModeration" node's creation"""
input ArticleTagModerationCreationWithoutModeratorInput {
  articleTag: ArticleTagModerationCreationArticleTagInput!
  moderation: NonEmptyTrimmedString
}"
`;

exports[`NodeCreationInputType Definition Category has a creation input type: CategoryCreationInput 1`] = `
""""The "Category" node's creation"""
input CategoryCreationInput {
  """You can either provide an UUID or let one be generated for you"""
  id: UUIDv4
  title: NonEmptyTrimmedString!

  """You can either provide a slug or let the title be "slugified" for you"""
  slug: NonEmptyTrimmedString
  parent: CategoryCreationParentInput
  order: UnsignedInt!

  """This category's children"""
  children: CategoryCreationChildrenInput

  """The articles attached to this category"""
  articles: CategoryCreationArticlesInput

  """It is possible to provide the article's body as raw HTML"""
  htmlBody: String
}"
`;

exports[`NodeCreationInputType Definition Category has a creation input type: CategoryCreationWithoutParentInput 1`] = `
""""The "Category" node's creation"""
input CategoryCreationWithoutParentInput {
  """You can either provide an UUID or let one be generated for you"""
  id: UUIDv4
  title: NonEmptyTrimmedString!

  """You can either provide a slug or let the title be "slugified" for you"""
  slug: NonEmptyTrimmedString
  order: UnsignedInt!

  """This category's children"""
  children: CategoryCreationChildrenInput

  """The articles attached to this category"""
  articles: CategoryCreationArticlesInput

  """It is possible to provide the article's body as raw HTML"""
  htmlBody: String
}"
`;

exports[`NodeCreationInputType Definition Tag has a creation input type: TagCreationInput 1`] = `
""""The "Tag" node's creation"""
input TagCreationInput {
  """You can either provide an UUID or let one be generated for you"""
  id: UUIDv4

  """A tag can be deprecated"""
  deprecated: Boolean
  title: NonEmptyTrimmedString!

  """You can either provide a slug or let the title be "slugified" for you"""
  slug: NonEmptyTrimmedString
  articles: TagCreationArticlesInput
}"
`;

exports[`NodeCreationInputType Definition UserProfile has a creation input type: UserProfileCreationInput 1`] = `
""""The "UserProfile" node's creation"""
input UserProfileCreationInput {
  user: UserProfileCreationUserInput!
  birthday: Date
  facebookId: ID
  googleId: ID
  twitterHandle: ID
}"
`;

exports[`NodeCreationInputType Definition UserProfile has a creation input type: UserProfileCreationWithoutUserInput 1`] = `
""""The "UserProfile" node's creation"""
input UserProfileCreationWithoutUserInput {
  birthday: Date
  facebookId: ID
  googleId: ID
  twitterHandle: ID
}"
`;
